--- a/src/app/modules/clinician-manager/cards/patient-overview.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-overview.component.html
@@ -1,5 +1,5 @@
 <div class="card" *ngIf="patientData">
-    <div class="card-header w3-orange  w3-center">
+  <div class="card-header w3-light-blue  w3-center">
 
 
         <div i18n="PatientData Info"><i class="fa fa-user"></i>
