--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.css
@@ -9,3 +9,19 @@
 .card-header {
     border-radius: 10px;
 }
+
+.card-footer {
+  padding: 0.25rem;
+}
+
+.card-block {
+  padding: 0.25rem;
+}
+
+.card-header {
+  padding: 0.25rem;
+}
+
+.card {
+  margin-bottom: 0.35rem;
+}
