--- a/src/app/modules/clinician-manager/cards/patient-imaging.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-imaging.component.css
@@ -28,3 +28,22 @@ button:disabled {
 .card-header {
     border-radius: 10px;
 }
+
+.card-footer {
+  padding: 0.25rem;
+}
+
+.card {
+  margin-bottom: 0.35rem;
+}
+
+.card-block {
+  padding: 0.25rem;
+}
+
+.card-header {
+  padding: 0.25rem;
+}
+
+
+
