--- a/src/app/modules/clinician-manager/cards/patient-notifications.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-notifications.component.css
@@ -25,3 +25,19 @@ button:disabled {
 .card-header {
     border-radius: 10px;
 }
+
+.card-footer {
+  padding: 0.25rem;
+}
+
+.card-block {
+  padding: 0.25rem;
+}
+
+.card-header {
+  padding: 0.25rem;
+}
+
+.card {
+  margin-bottom: 0.35rem;
+}
