--- a/src/app/modules/clinician-manager/cards/patient-diseases.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-diseases.component.css
@@ -25,3 +25,53 @@
 .card {
   margin-bottom: 0.35rem;
 }
+
+.table-sm td {
+  padding: 0.05rem;
+}
+
+ng2-smart-table.table.td {
+  padding: 0.25rem;
+}
+
+.table td {
+  padding: 0.25rem;
+}
+
+.table tfoot tr td {
+  padding: 0.05rem;
+}
+
+.table tfoot {
+  padding: 0.25rem;
+}
+
+.pagination {
+  padding-left: 0;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.pagination-sm .page-link, .pagination-sm .pagination-datatables li a, .pagination-datatables li .pagination-sm a, .pagination-sm .pagination li a, .pagination li .pagination-sm a {
+  padding: 0.25rem 0.25rem;
+  font-size: 0.5rem;
+}
+
+.page-item {
+  padding: 0.25rem 0.25rem;
+  font-size: 0.5rem;
+}
+
+li {
+  padding: 0.25rem 0.25rem;
+  font-size: 0.5rem;
+}
+
+ul {
+  padding: 0.25rem 0.25rem;
+  font-size: 0.5rem;
+}
+
+
+
+
