--- a/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.html
@@ -1,88 +1,92 @@
 <div class="card">
-    <div class="card-header w3-orange w3-center">
-        <div i18n="Patient Clinicians History"><i class="fa fa-medkit"></i> Patient Clinicians History</div>
-        <div class="w3-right">
+  <div class="card-header w3-orange w3-center">
+    <div i18n="Patient Clinicians History"><i class="fa fa-medkit"></i> Patient Clinicians History</div>
+    <div class="w3-right">
 
-            <div *ngIf="(progress.percentage < 100)"> loading: {{progress.percentage}}%</div>
-            <div *ngIf="(progress.percentage < 100)"> loaded: {{progress.total}} bytes</div>
-        </div>
+      <div *ngIf="(progress.percentage < 100)"> loading: {{progress.percentage}}%</div>
+      <div *ngIf="(progress.percentage < 100)"> loaded: {{progress.total}} bytes</div>
     </div>
-    <div class="card-block" style="overflow-x: auto;">
+  </div>
+  <div class="card-block" style="overflow-x: auto;">
+    <!--
 
+            <div class="row">
 
-        <div class="row">
-
-            <div class="col-xs-4">
-                <label class="label-control">Rows on page</label>
-                <select class="form-control input-sm" [(ngModel)]="rowsOnPage">
-                    <option [ngValue]="5">5</option>
-                    <option [ngValue]="10">10</option>
-                    <option [ngValue]="15">15</option>
-                </select>
-            </div>
-            <div class="col-xs-8">
-                <div class="row">
-                    <label class="col-xs-12 label-control">Sort by</label>
+                <div class="col-xs-4">
+                    <label class="label-control">Rows on page</label>
+                    <select class="form-control input-sm" [(ngModel)]="rowsOnPage">
+                        <option [ngValue]="5">5</option>
+                        <option [ngValue]="10">10</option>
+                        <option [ngValue]="15">15</option>
+                    </select>
                 </div>
-                <div class="col-xs-6">
+                <div class="col-xs-8">
                     <div class="row">
-                        <select class="form-control input-sm" [(ngModel)]="sortBy">
-                            <option ngValue="name">Name</option>
+                        <label class="col-xs-12 label-control">Sort by</label>
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="row">
+                            <select class="form-control input-sm" [(ngModel)]="sortBy">
+                                <option ngValue="name">Name</option>
 
-                        </select>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-xs-6">
+                        <div class="row">
+                            <select class="form-control input-sm" [(ngModel)]="sortOrder">
+                                <option ngValue="asc">Ascending</option>
+                                <option ngValue="desc">Descending</option>
+                                <option ngValue="badValue">Bad value</option>
+                            </select>
+                        </div>
                     </div>
                 </div>
-                <div class="col-xs-6">
-                    <div class="row">
-                        <select class="form-control input-sm" [(ngModel)]="sortOrder">
-                            <option ngValue="asc">Ascending</option>
-                            <option ngValue="desc">Descending</option>
-                            <option ngValue="badValue">Bad value</option>
-                        </select>
-                    </div>
-                </div>
             </div>
-        </div>
+          -->
 
-        <table class="table table-striped table-sm" [mfData]="clinicians" #mf="mfDataTable"
-               [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
-            <thead>
-            <tr>
-                <mfDefaultSorter by="name">
-                    Name
-                </mfDefaultSorter>
-                <th i18n="Institution">Institution</th>
-                <th i18n="Speciality">Speciality</th>
-                <th i18n="Start Date">Start Date</th>
-                <th i18n="End Date">End Date</th>
+    <!--
+    <ng2-smart-table class="table table-striped table-bordered table-sm" [settings]="settings" [source]="clinicians"></ng2-smart-table>
+-->
+    <table class="table table-striped table-bordered table-sm" [mfData]="clinicians" #mf="mfDataTable"
+           [mfRowsOnPage]="rowsOnPage" [(mfSortBy)]="sortBy" [(mfSortOrder)]="sortOrder">
+      <thead>
+      <tr>
+        <mfDefaultSorter by="name">
+          Name
+        </mfDefaultSorter>
+        <th i18n="Institution">Institution</th>
+        <th i18n="Speciality">Speciality</th>
+        <th i18n="Start Date">Start Date</th>
+        <th i18n="End Date">End Date</th>
 
-            </tr>
-            </thead>
-            <tbody>
+      </tr>
+      </thead>
+      <tbody>
 
-            <tr *ngFor="let clinician of mf.data">
+      <tr *ngFor="let clinician of mf.data">
 
-                    <td>{{clinician.name}}</td>
-                    <td>{{clinician.institution}}</td>
-                    <td>{{clinician.speciality}}</td>
-                    <td>{{clinician.startDate}}</td>
-                    <td>{{clinician.endDate}}</td>
+        <td>{{clinician.name}}</td>
+        <td>{{clinician.institution}}</td>
+        <td>{{clinician.speciality}}</td>
+        <td>{{clinician.startDate}}</td>
+        <td>{{clinician.endDate}}</td>
 
-                </tr>
+      </tr>
 
-            </tbody>
+      </tbody>
 
-            <tfoot>
-            <tr>
-                <td colspan="5">
-                    <mfBootstrapPaginator></mfBootstrapPaginator>
-                </td>
-            </tr>
-            </tfoot>
-        </table>
+      <tfoot>
+      <tr>
+        <td colspan="5">
+          <mfBootstrapPaginator class="pagination-sm"></mfBootstrapPaginator>
+        </td>
+      </tr>
+      </tfoot>
+    </table>
 
 
-    </div>
+  </div>
 
 
 </div>
