--- a/src/app/modules/clinician-manager/cards/patient-imaging.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-imaging.component.css
@@ -45,5 +45,19 @@ button:disabled {
   padding: 0.25rem;
 }
 
+.table-sm td {
+  padding: 0.05rem;
+}
+
+.table {
+  width: 100%;
+  max-width: 100%;
+}
+
+.table th,
+.table td {
+  padding: 0.25rem;
+}
+
 
 
