--- a/src/app/modules/clinician-manager/cards/patient-notifications.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-notifications.component.css
@@ -41,3 +41,17 @@ button:disabled {
 .card {
   margin-bottom: 0.35rem;
 }
+
+.table-sm td {
+  padding: 0.05rem;
+}
+
+.table {
+  width: 100%;
+  max-width: 100%;
+}
+
+.table th,
+.table td {
+  padding: 0.25rem;
+}
