--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.css
@@ -25,3 +25,19 @@
 .card {
   margin-bottom: 0.35rem;
 }
+
+.nv-series-2 {
+  stroke-dasharray: 5, 5;
+}
+
+.nv-group {
+  stroke-dasharray: 5, 5;
+}
+
+.nv-groups {
+  stroke-dasharray: 5, 5;
+}
+
+.mydashed {
+  stroke-dasharray: 5, 5;
+}
