--- a/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-daily-average-observations.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-header w3-blue  w3-center">
 
-    <div i18n="Average daily observations"><i class="fa fa-heartbeat"></i> Average daily observations</div>
+    <div i18n="Average daily observations"><i class="fa fa-heartbeat"></i> Patient Measurements and Recordings</div>
     <div class="w3-right">
 
       <div *ngIf="(progress.percentage < 100)"> loading: {{progress.percentage}}%</div>
@@ -93,7 +93,7 @@
 
       </div>
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-9">
-        <nvd3 [options]="options" [data]="data"></nvd3>
+        <nvd3 [options]="options" [data]="data" class="with-3d-shadow with-transitions"></nvd3>
 
       </div>
     </div>
@@ -103,10 +103,9 @@
 
   <div class="card-footer w3-white">
     <div class="w3-tiny w3-right w3-full">Hover mouse over the diagram for values. Click
-      series name in the legend above the diagram to view/hide series. Double click a chosen series legend to
-      view only this series.
+      series name in the legend of the diagram to view/hide series.
       If several series are shown on one axis, series are not normalised.
-      Compare values of very different ranges on separate y axes.
+
 
     </div>
   </div>
