--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -1,122 +1,107 @@
 <div class="animated fadeIn">
 
-
-  <div>
-
-
+  <!--
     <div class="row">
-      <div class="w3-tiny w3-right">Below you can see different cards containing several available
-        patient data from all available sources for selected dates.
-      </div>
-
       <h3 i18n="Patient Data Viewer"><i class="fa fa-calendar-check-o"></i> Patient data viewer</h3>
     </div>
+  -->
 
-    <div class="row">
-      <div *ngIf="showTab===1 || showTab === 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-        <patient-overview>
-        </patient-overview>
-      </div>
-
-      <div *ngIf="showTab===2 || showTab === 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
-
-        <patient-notifications>
-        </patient-notifications>
-      </div>
+  <div class="row">
+    <div *ngIf="showTab===1 || showTab === 0" class=" col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+      <patient-overview>
+      </patient-overview>
     </div>
 
-    <div class="row">
-      <div *ngIf="showTab===3 || showTab === 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
-        <patient-diseases>
-        </patient-diseases>
-      </div>
-      <div *ngIf="showTab===4 || showTab === 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
-        <patient-imaging>
-        </patient-imaging>
-      </div>
+  </div>
+
+
+  <div class="row">
+    <div *ngIf="showTab===2 || showTab === 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+
+      <patient-notifications>
+      </patient-notifications>
     </div>
+  </div>
 
 
-    <div class="row">
-      <div *ngIf="showTab===5 || showTab === 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-        <patient-clinicians-history>
-        </patient-clinicians-history>
-      </div>
-    </div>
+  <!--
+      <div class="row">
+         <div *ngIf="showTab===4 || showTab === 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-6">
+          <patient-imaging>
+          </patient-imaging>
+        </div>
+
+  </div> -->
 
 
-    <div class="row">
-      <div *ngIf="showTab===6 || showTab === 7 || showTab === 0"
-           class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-        <div *ngIf="showTab===6 || showTab === 0" class="card">
-          <div class="card-header w3-black w3-center">
-            <span i18n="Patient Events"><i class="fa fa-calendar-times-o"></i></span> Patient Events
+  <div *ngIf="showTab===6 || showTab === 7 || showTab === 0" class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+      <div class="card">
+        <div class="card-header w3-blue w3-center">
+          <span i18n="Patient Events"><i class="fa fa-calendar-times-o"></i></span>
+          Patient Events (Treatments, Medication, Measurements and Recordings)
 
 
-            <div class="card-actions">
-
-            </div>
+          <div class="card-actions">
 
           </div>
-          <div class="card-block">
 
-            <div class="row w3-center">
+        </div>
+        <div class="card-block">
 
-
-                                         <my-date-range-picker [options]="myDateRangePickerOptions"
-                                                                (dateRangeChanged)="onDateRangeChanged($event)"
-                                                                [selDateRange]="model">
-                                          </my-date-range-picker>
+          <div class="row w3-center">
 
 
-              <!--  <button type="button"
-                        class="btn btn-default"
-                        (click)="focusRange()"
-                        i18n="Selected range">
-                    Selected range
-                </button>
+            <my-date-range-picker [options]="myDateRangePickerOptions"
+                                  (dateRangeChanged)="onDateRangeChanged($event)"
+                                  [selDateRange]="model">
+            </my-date-range-picker>
 
--->
 
-            </div>
+            <!--  <button type="button"
+                      class="btn btn-default"
+                      (click)="focusRange()"
+                      i18n="Selected range">
+                  Selected range
+              </button> -->
 
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-              <!-- <div class=" w3-center">
-                <button type="button"
-                        class="btn btn-default {{zoomAll? 'btn-outline-success' : ''}}"
-                        (click)="focusAll()"
-                        i18n="View all data">
-                  View all
-                </button>
 
-                <button type="button"
-                        class="btn btn-default {{range==='lastweek' && !zoomAll ? 'btn-outline-success' : ''}}"
-                        (click)="focusLastWeek()"
-                        i18n="Last week">
-                  Last week
-                </button>
+          </div>
+          <!--
+                      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                    <!-- <div class=" w3-center">
+                          <button type="button"
+                                  class="btn btn-default {{zoomAll? 'btn-outline-success' : ''}}"
+                                  (click)="focusAll()"
+                                  i18n="View all data">
+                            View all
+                          </button>
 
-                <button type="button"
-                        class="btn btn-default {{range==='lastmonth' && !zoomAll ? 'btn-outline-success' : ''}}"
-                        (click)="focusLastMonth()"
-                        i18n="Last month">
-                  Last month
-                </button>
+                          <button type="button"
+                                  class="btn btn-default {{range==='lastweek' && !zoomAll ? 'btn-outline-success' : ''}}"
+                                  (click)="focusLastWeek()"
+                                  i18n="Last week">
+                            Last week
+                          </button>
 
-                <button type="button"
-                        class="btn btn-default {{range==='lastyear' && !zoomAll ? 'btn-outline-success' : ''}}"
-                        (click)="focusLastYear()"
-                        i18n="Last year">
-                  Last year
-                </button>
-              </div> -->
-            </div>
-            <div class="row">
-              <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <patient-treatments>
-                </patient-treatments>
-              </div>
-            </div>
+                          <button type="button"
+                                  class="btn btn-default {{range==='lastmonth' && !zoomAll ? 'btn-outline-success' : ''}}"
+                                  (click)="focusLastMonth()"
+                                  i18n="Last month">
+                            Last month
+                          </button>
+
+                          <button type="button"
+                                  class="btn btn-default {{range==='lastyear' && !zoomAll ? 'btn-outline-success' : ''}}"
+                                  (click)="focusLastYear()"
+                                  i18n="Last year">
+                            Last year
+                          </button>
+                        </div>
+          </div>-->
+
+
+          <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
               <div class=" w3-center">
 
@@ -150,10 +135,24 @@
                 </button>
 
                 <button type="button"
+                        class="btn btn-default {{range==='next6months'  && !zoomAll ? 'btn-outline-success' : ''}}"
+                        (click)="focusNext6Months()"
+                        i18n="Next 6 months">
+                  Next 6 months
+                </button>
+
+                <button type="button"
                         class="btn btn-default {{range==='lastyear'  && !zoomAll ? 'btn-outline-success' : ''}}"
                         (click)="focusLastYear()"
                         i18n="Last year">
                   Last year
+                </button>
+
+                <button type="button"
+                        class="btn btn-default {{range==='last2years'  && !zoomAll ? 'btn-outline-success' : ''}}"
+                        (click)="focusLast2Years()"
+                        i18n="Last year">
+                  Last 2 years
                 </button>
 
                 <button type="button"
@@ -164,85 +163,71 @@
                 </button>
               </div>
             </div>
-
-            <div class="row">
-              <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                <medication-history>
-                </medication-history>
-              </div>
-            </div>
           </div>
-          <div class="card-footer w3-white">
-            <div class="w3-tiny w3-right">Click inside the diagram area to enable mouse interactions (zoom,
-              scroll left/right, click for detail). Click chosen event to view it's detail in a pop up
-              window.
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div *ngIf="showTab===7 || showTab === 0" class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-        <div class=" w3-center">
-          <span i18n="Patient Events"><i class="fa fa-calendar-times-o"></i></span>
-
-          <button type="button"
-                  class="btn btn-default {{range==='lastweek' && !zoomAll ? 'btn-outline-success' : ''}}"
-                  (click)="focusLastWeek()"
-                  i18n="Last week">
-            Last week
-          </button>
-
-          <button type="button"
-                  class="btn btn-default {{range==='lastmonth' && !zoomAll ? 'btn-outline-success' : ''}}"
-                  (click)="focusLastMonth()"
-                  i18n="Last month">
-            Last month
-          </button>
-
-          <button type="button"
-                  class="btn btn-default {{range==='last2months'  && !zoomAll ? 'btn-outline-success' : ''}}"
-                  (click)="focusLast2Months()"
-                  i18n="Last 2 months">
-            Last 2 months
-          </button>
-
-          <button type="button"
-                  class="btn btn-default {{range==='last6months'  && !zoomAll ? 'btn-outline-success' : ''}}"
-                  (click)="focusLast6Months()"
-                  i18n="Last 6 months">
-            Last 6 months
-          </button>
-
-          <button type="button"
-                  class="btn btn-default {{range==='lastyear' && !zoomAll ? 'btn-outline-success' : ''}}"
-                  (click)="focusLastYear()"
-                  i18n="Last year">
-            Last year
-          </button>
 
 
         </div>
-      </div>
-
-    </div>
 
 
-    <div *ngIf="showTab===8 || showTab === 0" class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-        <patient-daily-average-observations>
-        </patient-daily-average-observations>
       </div>
     </div>
+  </div>
 
-    <div class="row">
-      <patient-morisky-results>
-      </patient-morisky-results>
+
+  <div *ngIf="showTab===6 || showTab === 0" class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+      <patient-treatments>
+      </patient-treatments>
     </div>
+  </div>
 
+  <div *ngIf="showTab===7 || showTab === 0" class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+      <medication-history>
+      </medication-history>
+    </div>
+  </div>
+
+  <div *ngIf="showTab===8 || showTab === 0" class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+
+
+    </div>
+  </div>
+
+
+  <div *ngIf="showTab===9 || showTab === 0" class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+      <patient-daily-average-observations>
+      </patient-daily-average-observations>
+    </div>
+  </div>
+
+  <div *ngIf="showTab===10 || showTab === 0" class="row">
+    <patient-morisky-results>
+    </patient-morisky-results>
+  </div>
+
+  <div *ngIf="showTab===3 || showTab === 0" class="row">
+    <div
+      class=" col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+      <patient-diseases>
+      </patient-diseases>
+    </div>
 
   </div>
 
 
+  <div *ngIf="showTab===5 || showTab === 0" class="row">
+    <div
+      class=" col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+      <patient-clinicians-history>
+      </patient-clinicians-history>
+    </div>
+  </div>
+
 </div>
+
+
+
 
