--- a/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-clinicians-history.component.css
@@ -46,18 +46,12 @@
   padding: 0.25rem;
 }
 
-.pagination {
-  display: inline-block;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  padding: 0px;
+pagination {
+  padding: 0;
+  margin: 0;
+  height: 12px;
 }
 
-.pagination-sm {
-  display: inline-block;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  padding: 0px;
-}
+
 
 
