--- a/src/app/modules/clinician-manager/clinician-manager.component.html
+++ b/src/app/modules/clinician-manager/clinician-manager.component.html
@@ -14,12 +14,23 @@
 
   </div>
 
+  <!--
 
   <div class="row">
     <div *ngIf="showTab===2 || showTab === 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
 
       <patient-notifications>
       </patient-notifications>
+    </div>
+  </div>
+-->
+
+
+  <div class="row">
+    <div *ngIf="showTab===11 || showTab === 0" class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+
+      <patient-concluding-comments>
+      </patient-concluding-comments>
     </div>
   </div>
 
