--- a/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.css
+++ b/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.css
@@ -23,7 +23,7 @@
 }
 
 .card {
-  margin-bottom: 0.35rem;
+  margin-bottom: 0.25rem;
 }
 
 .table-sm td {
@@ -33,6 +33,7 @@
 .table {
   width: 100%;
   max-width: 100%;
+  margin-bottom: 0rem;
 }
 
 .table th,
@@ -44,10 +45,11 @@
   padding: 0.25rem;
 }
 
-pagination {
-  padding: 0;
-  margin: 0;
-  height: 12px;
+ul.pagination {
+
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+
 }
 
 
