--- a/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-concluding-comments.component.html
@@ -91,7 +91,7 @@
 
       <tfoot>
       <tr>
-        <td colspan="5">
+        <td colspan="5" class="w3-center">
           <mfBootstrapPaginator class="pagination-sm"></mfBootstrapPaginator>
         </td>
       </tr>
