--- a/src/app/modules/clinician-manager/cards/patient-diseases.component.html
+++ b/src/app/modules/clinician-manager/cards/patient-diseases.component.html
@@ -98,7 +98,7 @@
 
 
       <tr>
-        <td colspan="5">
+        <td colspan="5" class="w3-center">
           <mfBootstrapPaginator class="pagination-sm"></mfBootstrapPaginator>
         </td>
       </tr>
